--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -3,34 +3,41 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 28px;
+  font-size: 24px;
   color: '#010101';
   flex-direction: column;
 }
 .form {
-  width: 300px;
-  height: 200px;
+  width: 400px;
+  height: 250px;
+  font-size: 18px;
   border: 1px solid gray;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   padding: 20px;
+  margin: 40px 0;
 }
 .label {
   display: flex;
   flex-direction: column;
-  font-size: 24px;
+  font-size: 18px;
+  font-weight: bold;
 }
 .input {
   margin-top: 15px;
   width: 200px;
-  font-size: 20px;
+  font-size: 16px;
   padding: 5px;
+  border-radius: 5px;
 }
 
 .input:focus {
   outline: none;
-  border: 1px solid rgb(128, 207, 238);
+  border: 2px solid rgb(128, 207, 238);
+}
+.input::placeholder {
+  font-size: 16px;
 }
 button {
   padding: 10px 15px;
@@ -42,4 +49,33 @@ button {
 }
 button:hover {
   background-color: rgb(177, 172, 172);
+}
+.contacts .contact {
+  font-size: 28px;
+  font-weight: bold;
+}
+.filter {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.numberList {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.number {
+  margin-right: 15px;
+}
+.contactItem {
+  display: flex;
+  justify-content: space-between;
+}
+.deleteBtn {
+  width: 30px;
+  height: 30px;
+  font-size: 14px;
+  display: inline-block;
+  padding: 3px;
 }
